--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -5,15 +5,15 @@
     </a>
     <nav>
       <ul>
-        <li>
-          <a routerLink="/login">Login</a>
+        <li *ngIf="!isAuth">
+          <a routerLink="/login-page">Login</a>
         </li>
-        <li class="menu-container">
-          <a routerLink="/dashboard">Ilko</a>
+        <li *ngIf="isAuth" class="menu-container">
+          <a routerLink="/dashboard">{{user.name}}</a>
           <div class="menu">
             <a routerLink="/profile">Profile</a>
             <a routerLink="/orders">Orders</a>
-            <a>Logout</a>
+            <a (click)="logout()">Logout</a>
           </div>
         </li>
         <li>
